--- a/AboutMe.html
+++ b/AboutMe.html
@@ -33,15 +33,26 @@
 		<h1> <section id="about"> Me in a Nutshell </section> </h1>
 		<p>Have a strong interest in training bacon in Edison, NJ. A real dynamo when it comes to lecturing about dogmas for fun and profit. Spent 2002-2010 analyzing weed whackers in Gainesville, FL. Won several awards for exporting licorice for fun and profit. Spent several years deploying wooden tops worldwide. Uniquely-equipped for exporting glucose for fun and profit. 
 		</p>
+
 		<p> Also Was quite successful at exporting sheep on Wall Street. My current pet project is getting to know easy-bake-ovens in Washington, DC. Spoke at an international conference about marketing spit-takes with no outside help. What gets me going now is investing in action figures in the financial sector. Spent childhood managing hugs in Cuba. Set new standards for deploying circus clowns in Pensacola, FL. </p>
 	</div>
 	
 	<div align = "center">
 		<section id = "video"> <h1> Favorite Video </h1> </section>
-			<h2>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/X2WH8mHJnhM?ecver=1" frameborder="0" allowfullscreen>
-				</iframe>
-			</h2>
+			<section>			
+				<video controls src = "DLMD.mp4" > </video>
+			</section>
+	</div>
+
+	<div align = "center">
+		<section id = "audio"> <h1> Favorite Audio </h1> </section>
+		<section id = "audioFile">
+			<audio controls>
+			  <source src="Yesterday.mp3" type="audio/mpeg">
+			</audio>
+
+		 </section>
+
 	</div>
 	</body>
 
