--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,12 +5,12 @@
 		
 	</head>
 	
-	<body>
-	<div style = "color:red" align = "center">
-		<h1> Hi I'm Joe </h1>
+	<body style = "background-color: #369BC1">
+	<div style = "color:black" align = "center">
+		<h1 style = "font-family: helvetica;"> Joe's Personal Website </h1>
 	</div>
-	<div style = "color:purple">
-		<b> <h1> Table of Contents </h1>
+	<div style = "color:black"  style = "font-family: sans-serif;">
+		<b> <h1 style = "font-family: Arial;"> Table of Contents </h1>
 				<ul>
 				<a href = "#about">
 					<li> Me In a Nutshell </li>
@@ -21,23 +21,28 @@
 				<a href = "#audio">
 					<li> Favorite Audio </li>
 				</a>
+				<a href = "#interests">
 					<li> List of Interests </li>
+				</a>
 				<a href = "AcademicLife.html">
 					<li> Academic Life </li>
 				</a>
+				<a href = "ContactMe.html">
 					<li> Contact Me </li>
+					</a>
 				</ul>
 	</div>
 	
-	<div align = "center"> 
+	<div align = "center"  style = "font-family: georgia;"> 
 		<h1> <section id="about"> Me in a Nutshell </section> </h1>
-		<p>Have a strong interest in training bacon in Edison, NJ. A real dynamo when it comes to lecturing about dogmas for fun and profit. Spent 2002-2010 analyzing weed whackers in Gainesville, FL. Won several awards for exporting licorice for fun and profit. Spent several years deploying wooden tops worldwide. Uniquely-equipped for exporting glucose for fun and profit. 
+		<img src = "sng.png">
+		<p>Have a strong interest in training bacon in Edison, NJ. A real dynamo when it comes to lecturing about dogmas for fun and profit. Spent 2002-2010 analyzing weed whackers in Gainesville, FL. <br>Won several awards for exporting licorice for fun and profit. Spent several years deploying wooden tops worldwide. Uniquely-equipped for exporting glucose for fun and profit. 
 		</p>
 
-		<p> Also Was quite successful at exporting sheep on Wall Street. My current pet project is getting to know easy-bake-ovens in Washington, DC. Spoke at an international conference about marketing spit-takes with no outside help. What gets me going now is investing in action figures in the financial sector. Spent childhood managing hugs in Cuba. Set new standards for deploying circus clowns in Pensacola, FL. </p>
+		<p> Spent 2001-2007 merchandising xylophones in Orlando, FL. Spent 2001-2004 testing the market for clip-on ties in Mexico. <br> A real dynamo when it comes to supervising the production of fried chicken in Bethesda, MD. Spent several years working with etch-a-sketches in the government sector. <br>Spent the better part of the 90's investing in pogo sticks in Bethesda, MD. Spent 2001-2004 managing hobos in West Palm Beach, FL.</p>
 	</div>
 	
-	<div align = "center">
+	<div align = "center"  style = "font-family: arial;">
 		<section id = "video"> <h1> Favorite Video </h1> </section>
 			<section>			
 				<video controls src = "DLMD.mp4" > </video>
@@ -48,11 +53,24 @@
 		<section id = "audio"> <h1> Favorite Audio </h1> </section>
 		<section id = "audioFile">
 			<audio controls>
-			  <source src="Yesterday.mp3" type="audio/mpeg">
+			  <source src="HTE.mp3" type="audio/mpeg">
 			</audio>
 
 		 </section>
 
+	</div>
+
+	<div align = "left"  style = "font-family: arial;">
+		<section id = "interests">
+			<h1> List of Interests </h1>
+			<ul>
+				<li> Songwriting </li>
+				<li> Programming </li>
+				<li> Tinkering things </li>
+				<li> Finding out how stuff works </li>
+				<li> Video Games </li>
+			</ul>
+		</section>
 	</div>
 	</body>
 
