--- a/AcademicLife.html
+++ b/AcademicLife.html
@@ -4,15 +4,16 @@
 		<title> Academic Life </title> 
 	</head>
 	
-	<body>
+	<body style = "background-color: #369BC1">
+		<a href = "AboutMe.html"> 
+						<h6> Back to Home </h6> 
+					<a>			
 		<h1> My Academic Life </h1>
 		<ul>
 			<li> My ID Number: 11442840 </li>
 			<li> My Degree: Bachelor of Science in Computer Science </li>	
 		</ul>
-		<a href = "AboutMe.html"> 
-						<h6> Back to Home </h6> 
-					<a>			
+		
 		
 		<table>
 			<thead>
