Finished all functionalities
Not yet done with overall design

--- a/AcademicLife.html
+++ b/AcademicLife.html
@@ -8,29 +8,79 @@
 		<a href = "AboutMe.html"> 
 						<h6> Back to Home </h6> 
 					<a>			
-		<h1> My Academic Life </h1>
-		<ul>
+		<h1 > My Academic Life </h1>
+		<ul style="font-family: Arial">
 			<li> My ID Number: 11442840 </li>
 			<li> My Degree: Bachelor of Science in Computer Science </li>	
 		</ul>
 		
-		
-		<table>
-			<thead>
-				<tr> 
-					<th> Course Code </th>
-					<th> Day/s </th>
-					<th> Time </th>
-				</tr> 
-			</thead>
-			<tbody>
-				<tr>
-					<td> COMORGA </td>
-					<td> TH </td>
-					<td> 1100-1230 </td>
-				</tr>
-			</tbody>
-		</table>
+		<div align = "center">
+			<h1> My classes this term </h1>
+			<table border = 1 >
+				<thead>
+					<tr> 
+						<th> Course Code </th>
+						<th> Day/s </th>
+						<th> Time </th>
+						<th> Section </th>
+						<th> Units </th>
+					</tr> 
+				</thead>
+				<tbody>
+					<tr>
+						<td> COMORGA </td>
+						<td> TH </td>
+						<td> 1100-1230 </td>
+						<td> S11 </td>
+						<td> 3 </td>
+					</tr>
+					<tr> 
+						<td> FORMDEV </td>
+						<td> T </td>
+						<td> 1530-1700 </td>
+						<td> S18 </td>
+						<td> 0.5 </td>
+					</tr>
+					<tr> 
+						<td> LBYNE03 </td>
+						<td> MW </td>
+						<td> 1100-1230 </td>
+						<td> S12A </td>
+						<td> 1 </td>
+					</tr>
+					<tr> 
+						<td> SCIMATP </td>
+						<td> MW </td>
+						<td> 1430-1530 </td>
+						<td> S18 </td>
+						<td> 2 </td>
+					</tr>
+					<tr> 
+						<td> NECOR03 </td>
+						<td> MW </td>
+						<td> 0915-1045 </td>
+						<td> S12 </td>
+						<td> 3 </td>
+					</tr>
+					<tr> 
+						<td> WEB-PRG </td>
+						<td> MW </td>
+						<td> 1245-1415 </td>
+						<td> S12 </td>
+						<td> 3 </td>
+					</tr>
+					<tr> 
+						<td> DIGILOG </td>
+						<td> MW </td>
+						<td> 1615-1745 </td>
+						<td> S12 </td>
+						<td> 3 </td>
+					</tr>
+
+
+				</tbody>
+			</table>
+		</div>
 	</body>
 		
 </html>
